--- a/src/blink.glade
+++ b/src/blink.glade
@@ -3,13 +3,112 @@
 <interface>
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkApplicationWindow">
-    <property name="name">blink</property>
     <property name="can-focus">False</property>
     <property name="default-width">1000</property>
     <property name="default-height">600</property>
     <property name="gravity">center</property>
     <child>
       <object class="GtkBox">
+        <property name="name">MainApp</property>
+        <property name="can-focus">False</property>
+        <child>
+          <object class="GtkBox">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="orientation">vertical</property>
+            <property name="baseline-position">bottom</property>
+            <child>
+              <object class="GtkTextView">
+                <property name="name">messagesField</property>
+                <property name="width-request">700</property>
+                <property name="height-request">500</property>
+                <property name="sensitive">False</property>
+                <property name="can-focus">False</property>
+                <property name="cursor-visible">False</property>
+                <property name="accepts-tab">False</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <object class="GtkTextView">
+                <property name="height-request">81</property>
+                <property name="can-focus">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkBox">
+            <property name="name">onlineListBox</property>
+            <property name="width-request">305</property>
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="orientation">vertical</property>
+            <child>
+              <object class="GtkTextView">
+                <property name="name">onlineListTitle</property>
+                <property name="visible">True</property>
+                <property name="sensitive">False</property>
+                <property name="can-focus">False</property>
+                <property name="double-buffered">False</property>
+                <property name="justification">center</property>
+                <property name="top-margin">5</property>
+                <property name="bottom-margin">5</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkListBox">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+      </object>
+    </child>
+  </object>
+  <object class="GtkApplicationWindow" id="blink">
+    <property name="name">blink</property>
+    <property name="can-focus">False</property>
+    <property name="default-width">1000</property>
+    <property name="default-height">600</property>
+    <property name="gravity">center</property>
+    <property name="show-menubar">False</property>
+    <child>
+      <object class="GtkBox">
+        <property name="name">IntroBox</property>
         <property name="visible">True</property>
         <property name="can-focus">False</property>
         <property name="margin-left">204</property>
@@ -54,6 +153,7 @@
         </child>
         <child>
           <object class="GtkTextView">
+            <property name="name">enterServer</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="editable">False</property>
@@ -70,6 +170,7 @@
         </child>
         <child>
           <object class="GtkEntry">
+            <property name="name">enterServerDialog</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
           </object>
@@ -80,9 +181,6 @@
           </packing>
         </child>
       </object>
-    </child>
-    <child type="titlebar">
-      <placeholder/>
     </child>
   </object>
 </interface>
