--- a/src/blink.ui
+++ b/src/blink.ui
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk" version="4.0"/>
-  <requires lib="gtk" version="4.0"/>
-  <requires lib="gtk" version="4.0"/>
   <object class="GtkApplicationWindow" id="blink">
     <property name="name">blink</property>
     <property name="default-width">1000</property>
@@ -32,6 +30,7 @@
             <property name="cursor-visible">0</property>
             <property name="accepts-tab">0</property>
             <property name="input-purpose">alpha</property>
+            <property name="width-request">500</property>
           </object>
         </child>
         <child>
