--- a/src/blink.glade
+++ b/src/blink.glade
@@ -34,12 +34,29 @@
               </packing>
             </child>
             <child>
-              <placeholder/>
+              <object class="GtkTextView">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <style>
+                  <class name="color: @theme_header_color;"/>
+                </style>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
             </child>
             <child>
               <object class="GtkTextView">
                 <property name="height-request">81</property>
                 <property name="can-focus">True</property>
+                <property name="margin-top">6</property>
+                <property name="margin-bottom">4</property>
+                <property name="left-margin">10</property>
+                <property name="right-margin">10</property>
+                <property name="top-margin">10</property>
+                <property name="bottom-margin">10</property>
               </object>
               <packing>
                 <property name="expand">False</property>
